# MiBud

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CHECKLIST.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  demo.py  pyproject.toml  requirements.txt  run.sh
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  personality_proposal.md
.github/workflows/: ci.yml
ai/: __init__.py  anomaly.py  conversation.py  mcp_client.py  memory.py  plugins.py  router.py  speaker.py  streaming.py  stt.py  tools.py  trace.py  tts.py  vad.py  wakeword.py
assets/: README.md  _pytest_output.txt  generate.py
core/: __init__.py  backup.py  config.py  dialog.py  events.py  health.py  main.py  power.py  proactive.py  state.py
deploy/: mibud.service
docs/: FIRST_BOOT_VALIDATION.md  HARDWARE.md
docs/superpowers/plans/: 2026-04-16-mibud-preflight-hardening.md
hardware/: __init__.py  audio.py  battery.py  buttons.py  camera.py  display.py  led.py
home/: automation.py
personalities/: __init__.py  manager.py  presets.py
scripts/: first_boot_check.sh  setup.sh
sync/: __init__.py  manager.py
tests/: __init__.py  conftest.py  test_audio_utils.py  test_backup.py  test_config_migration.py  test_config_security.py  test_core.py  test_dialog.py  test_ha_security.py  test_health.py  test_mcp_client.py  test_memory.py  test_plugins.py  test_power.py  test_proactive.py  test_router.py  test_router_reliability.py  test_shutdown.py  test_state.py  test_streaming.py  test_tools.py  test_trace.py  test_tts.py  test_tuning.py  test_vad.py  test_web_auth.py  test_web_errors.py
utils/: audio_utils.py  utilities.py
web/: __init__.py  api_v2.py  auth.py  server.py  wizard.py
web/templates/: dashboard.html  wizard.html
